--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@knight-lab/timelinejs",
-    "version": "3.9.2",
+    "name": "@171h/timelinejs",
+    "version": "3.10.2",
     "license": "MPL-2.0",
     "description": "TimelineJS v3: A Storytelling Timeline built in JavaScript, made by Northwestern University Knight Lab.",
     "dependencies": {
